syntax = "proto3";
import "base.proto";
option go_package = "./;proto";

service Category{
  //商品分类
  rpc GetAllCategorysList(Empty) returns(CategoryListResponse); //获取所有的分类
  rpc GetSubCategory(CategoryListRequest) returns(SubCategoryListResponse);
  rpc CreateCategory(CategoryInfoRequest) returns(CategoryInfoResponse); //新建分类信息cd
  rpc DeleteCategory(DeleteCategoryRequest) returns(Empty); //删除分类
  rpc UpdateCategory(CategoryInfoRequest) returns(Empty); //修改分类信息

}



message CategoryListRequest {
  uint32 id = 1;
}


message CategoryInfoRequest {
  uint32 id = 1;
  string name = 2;
  uint32 parentCategory = 3;
  int32 level = 4;
  bool isTab = 5;
}


message DeleteCategoryRequest {
  int32 id = 1;
}


message CategoryInfoResponse {
  uint32 id = 1;
  string name = 2;
  uint32 parentCategory = 3;
  int32 level = 4;
  bool isTab = 5;
  //repeated CategoryInfoResponse subCategorys = 6;
}

message CategoryListResponse {
  int32 total = 1;
  repeated CategoryInfoResponse data = 2;
  string jsonData = 3;
}

message SubCategoryListResponse {
  CategoryInfoResponse info = 2;
  repeated CategoryInfoResponse subCategorys = 3;
}
